<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.mqjd</groupId>
  <artifactId>data-engineering</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <modules>
    <module>data-exercise</module>
    <module>data-exercise/flink</module>
    <module>data-exercise/spark</module>
    <module>data-exercise/spark/spark-core</module>
    <module>data-exercise/spark/spark-sql</module>
    <module>data-exercise/hbase</module>
  </modules>

  <properties>
    <maven.compiler.source>8</maven.compiler.source>
    <maven.compiler.target>8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <scala.version>2.13.12</scala.version>
    <scala.binary.version>2.13</scala.binary.version>
    <flink.version>1.18.1</flink.version>
    <flink.connector.version>3.1.2-1.18</flink.connector.version>
    <spark.version>3.5.1</spark.version>
    <kafka.version>3.1.0</kafka.version>
    <hadoop.version>3.3.2</hadoop.version>
    <yarn.version>3.3.2</yarn.version>
    <hdfs.version>3.3.2</hdfs.version>
    <hbase.version>2.5.8</hbase.version>
    <elasticsearch.version>8.1.0</elasticsearch.version>
    <junit.version>4.13.1</junit.version>
    <guava.version>31.1-jre</guava.version>
    <log4j2.version>2.17.2</log4j2.version>
    <slf4j.version>2.0.12</slf4j.version>
    <duckdb.version>0.10.0</duckdb.version>
    <spring.version>5.3.32</spring.version>
    <bytebuddy.version>1.14.17</bytebuddy.version>
    <bytekit.version>0.0.9</bytekit.version>
    <scalatest.version>3.2.19</scalatest.version>
    <maven-surefire-plugin.version>3.3.0</maven-surefire-plugin.version>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>net.bytebuddy</groupId>
        <artifactId>byte-buddy</artifactId>
        <version>${bytebuddy.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>net.bytebuddy</groupId>
        <artifactId>byte-buddy-agent</artifactId>
        <version>${bytebuddy.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>com.alibaba</groupId>
        <artifactId>bytekit-core</artifactId>
        <version>${bytekit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>net.alchim31.maven</groupId>
          <artifactId>scala-maven-plugin</artifactId>
          <version>4.9.2</version>
          <executions>
            <execution>
              <id>scala-compile-first</id>
              <phase>process-resources</phase>
              <goals>
                <goal>compile</goal>
                <goal>testCompile</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
          <executions>
            <execution>
              <id>java-compile-second</id>
              <phase>compile</phase>
              <goals>
                <goal>compile</goal>
              </goals>
            </execution>
          </executions>
          <configuration>
            <source>${maven.compiler.source}</source>
            <target>${maven.compiler.target}</target>
            <useIncrementalCompilation>false</useIncrementalCompilation>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>